--- a/marlon_sample_tmux_conf.conf
+++ b/marlon_sample_tmux_conf.conf
@@ -7,8 +7,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-
 bind-key -n M-S-Left swap-window -t -1
 bind-key -n M-S-Right swap-window -t +1
+
+set-option -g allow-rename off
 
 source-file ${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme
