--- a/marlon_sample_tmux_conf.conf
+++ b/marlon_sample_tmux_conf.conf
@@ -7,6 +7,11 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
 bind-key -n M-S-Left swap-window -t -1
 bind-key -n M-S-Right swap-window -t +1
 
