--- a/marlon_sample_tmux_conf.conf
+++ b/marlon_sample_tmux_conf.conf
@@ -1,20 +1,17 @@
 set-option -g prefix M-p
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
+set-option -g allow-rename off
+bind -n M-J  previous-window
+bind -n M-L next-window
+bind -n M-j select-pane -L
+bind -n M-l select-pane -R
+bind -n M-i select-pane -U
+bind -n M-k select-pane -D
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
+bind-key -n S-Left swap-window -t -1
+bind-key -n S-Right swap-window -t +1
 
-bind-key -n M-S-Left swap-window -t -1
-bind-key -n M-S-Right swap-window -t +1
 
-set-option -g allow-rename off
-
-source-file ${HOME}/.tmux-themepack/powerline/block/cyan.tmuxtheme
+source-file ${HOME}/.tmux-themepack/powerline/default/cyan.tmuxtheme
